Some Updates - Removing deprecated method